// src/main/java/com/docweaver/domain/DocumentStatus.java
package com.docweaver.domain;

public enum DocumentStatus {
    UPLOADED,
    PROCESSING,
    EXTRACTED,
    IN_REVIEW,
    APPROVED,
    READY_FOR_EXPORT,
    EXPORTED
}
